tests/snapshots/examples_fixtures/type_system__failing__151_array_literal_concrete_conflict_prefers_e300.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/151_array_literal_concrete_conflict_prefers_e300.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with String.

  --> examples/type_system/failing/151_array_literal_concrete_conflict_prefers_e300.flx:2:31
  |
2 |     let xs: Array<Int> = [|1, "two"|]
  |                               ^^^^^
  |                               ----- expected Int, found String
== stdout ==
<not executed>
